# projected-nft-whirlpool

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  aiken.toml  plutus.json
.github/workflows/: rust.yml  tests.yml
cardano/: .gitignore  Cargo.toml  README.md  plutus.json
cardano/sdk/: README.md  projected-nft.cddl
cardano/sdk/rust/: Cargo.toml
cardano/sdk/rust/examples/: contract_deploy.rs
cardano/sdk/rust/examples/configs/: lock.yml
cardano/sdk/rust/src/: mint_redeemer.rs  output_reference.rs  redeem.rs  state.rs
cardano/sdk/wasm/: Cargo.toml  package-lock.json  package.json
cardano/sdk/wasm/example_dapp/: package.json  tsconfig.json
cardano/sdk/wasm/example_dapp/src/: run.ts
cardano/sdk/wasm/json-gen/: Cargo.toml
cardano/sdk/wasm/json-gen/output/: json-types.d.ts
cardano/sdk/wasm/json-gen/schemas/: cardano_projected_nft::MintRedeemer.json  cardano_projected_nft::Owner.json  cardano_projected_nft::Status.json  cardano_projected_nft_sdk::OutRef.json  cardano_projected_nft_sdk::Redeem.json  cardano_projected_nft_sdk::State.json  cml_chain::assets::AssetName.json
cardano/sdk/wasm/json-gen/src/: lib.rs  main.rs
cardano/sdk/wasm/src/: lib.rs  output_reference.rs  utils.rs
dapp/: .env.example  README.md  config-overrides.js  package.json  tsconfig.json  wagmi.config.ts
dapp/public/: index.html  manifest.json
dapp/src/: App.css  App.tsx  MuiSetup.tsx  contracts.ts  generated.ts  index.tsx  providers.tsx  react-app-env.d.ts  store.ts
dapp/src/components/: AddressCardano.tsx  ChainSelector.tsx  ConnectWallet.tsx  CopyableTypography.tsx  Countdown.tsx  IsConnectedWrapper.tsx  LockNftButtonCardano.tsx  LockNftButtonEVM.tsx  LockNftListCardano.tsx  LockNftListEVM.tsx  LockNftSection.tsx  MultilockButtonEVM.tsx  MultipleSelectionLockButton.tsx  MultipleSelectionUnlockButton.tsx  MultipleSelectionWithdrawButton.tsx  MultirequestunlockButtonEVM.tsx  MultiwithdrawButtonEVM.tsx  Navbar.tsx  PolicyIdCardano.tsx  TransactionButton.tsx  UnlockNftListCardano.tsx  UnlockNftListEVM.tsx  UnlockNftSection.tsx
dapp/src/components/cardano/: AddressCardano.tsx  LockNftButton.tsx  LockNftList.tsx  MultipleSelectionLockButton.tsx  PolicyId.tsx  UnlockNftList.tsx
dapp/src/components/evm/: CollectionLockButton.tsx  CollectionUnlockButton.tsx  CollectionWithdrawButton.tsx  LockNftButton.tsx  LockNftList.tsx  MultipleSelectionLockButton.tsx  UnlockNftList.tsx  (+2 more)
dapp/src/dialogs/: ApproveCollectionDialog.tsx  CardanoWalletsDialog.tsx  InstallWalletDialog.tsx  WalletInfoDialog.tsx
dapp/src/hooks/: use-network-id.ts  use-wallet-api.ts  useCardanoBalance.ts  useCardanoNetworkId.ts  useGetAlchemy.ts  useGetChainType.ts  useGetLocksCardano.ts  useGetLocksEVM.ts  useGetNftsEVM.ts  useGetNftsMetadataCardano.ts  useGetNftsMetadataEVM.ts  useGetVmType.ts  useLucid.ts
dapp/src/pages/: HomePage.tsx
dapp/src/utils/: constants.ts  functionKey.ts  texts.ts  types.ts  utils.ts
evm/: .env.template  .gitignore  .gitmodules  .prettierrc.json  README.md  foundry.toml  package.json
evm/script/: Deploy.s.sol
evm/src/: Hololocker.sol  HololockerInterface.sol
evm/test/: Hololocker.t.sol
scripts/: json-ts-types.js  publish-helper.js  wasm-to-asm.js
sdk/: Cargo.toml
sdk/examples/: contract_deploy.rs
sdk/examples/configs/: claim.yml  example_lock.yml  example_unlock.yml  lock.yml  lock_nft.yml  unlock.yml  unlock_nft.yml
sdk/rust/: Cargo.toml
sdk/rust/examples/: contract_deploy.rs
sdk/rust/examples/configs/: claim.yml  lock.yml  unlock.yml
sdk/rust/src/: conversions.rs  lib.rs  mint_redeemer.rs  output_reference.rs  redeem.rs  state.rs
sdk/spec/: hololocker.cddl
sdk/src/: conversions.rs  lib.rs  plutus_contract.rs
sdk/wasm/: Cargo.toml  package.json
sdk/wasm/example_dapp/: package.json
sdk/wasm/example_dapp/src/: run.ts
sdk/wasm/json-gen/: Cargo.toml
sdk/wasm/src/: lib.rs
validators/: hololocker.ak  hololocker.ak.bak  hololocker_max_work.ak.bak  vault.ak
(+27 files in other folders)
