[package]
name = "projected-nft-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cardano-multiplatform-lib = { version = "3.1.3" }
cbor_event = { version = "2.4.0" }
cryptoxide = { version = "0.4.4" }
hex = { version = "0.4.3" }
serde = { version = "1.0.171" }
serde_derive = { version = "1.0.171" }
serde_json = { version = "1.0.100" }
