[package]
name = "projected-nft-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cardano-serialization-lib = "11.5.0"
cbor_event = { version = "2.4.0" }
cryptoxide = { version = "0.4.4" }
hex = { version = "0.4.3" }
serde = { version = "1.0.171" }
serde_derive = { version = "1.0.171" }
serde_json = { version = "1.0.100" }
minicbor = "0.19.1"
cbored = "0.3.4"
[dev-dependencies]
anyhow = { version = "1.0.71" }
bip39 = { version = "2.0.0" }
clap = { version = "4.3", features = ["derive"] }
cryptoxide = { version = "0.4.4" }
hex = { version = "0.4.3" }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde_yaml = { version = "0.9.22" }
tokio = { version = "1.29.1", features = ["full"]}
