[package]
name = "projected-nft-sdk-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
projected-nft-sdk = { path = "../rust" }

cml-core = { git = "https://github.com/dcSpark/cardano-multiplatform-lib.git", rev = "acca172633d0570a7432058aa5b0717ad2f0c6d7" }
cml-chain = { git = "https://github.com/dcSpark/cardano-multiplatform-lib.git", rev = "acca172633d0570a7432058aa5b0717ad2f0c6d7" }
cml-crypto = { git = "https://github.com/dcSpark/cardano-multiplatform-lib.git", rev = "acca172633d0570a7432058aa5b0717ad2f0c6d7" }

cml-core-wasm = { git = "https://github.com/dcSpark/cardano-multiplatform-lib.git", rev = "acca172633d0570a7432058aa5b0717ad2f0c6d7" }
cml-chain-wasm = { git = "https://github.com/dcSpark/cardano-multiplatform-lib.git", rev = "acca172633d0570a7432058aa5b0717ad2f0c6d7" }
cml-crypto-wasm = { git = "https://github.com/dcSpark/cardano-multiplatform-lib.git", rev = "acca172633d0570a7432058aa5b0717ad2f0c6d7" }

cbor_event = "2.4.0"
wasm-bindgen = { version = "0.2", features=["serde-serialize"] }
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
serde-wasm-bindgen = "0.5.0"
