[package]
name = "cardano-projected-nft-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cardano-projected-nft = { path = "../rust" }

cml-core = { version = "0.1.0" }
cml-chain = { version = "0.1.0" }
cml-crypto = { version = "0.1.0" }

cml-core-wasm = { version = "0.1.0" }
cml-chain-wasm = { version = "0.1.0" }
cml-crypto-wasm = { version = "0.1.0" }

cbor_event = "2.4.0"
wasm-bindgen = { version = "0.2", features=["serde-serialize"] }
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
serde-wasm-bindgen = "0.5.0"
